src/test/deca/context/valid/class/method_bool.deca
// Description:
//    Test de declaration d'une classe avec une methode de type de retour boolean
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    Context: pas d'erreur
//
// Historique:
//    cree le 20/01/2022


class LovesMe{

    boolean Love(int x){
        if(x > 10)
        {
            return true ;
        }
        else
        {
            return false ;
        }

}
}


{
    LovesMe l = new LovesMe() ;
    boolean y = l.Love(12);
    boolean z = l.love(9) ;
}
