src/test/deca/context/invalid/class/method_appel_faux_v3.deca
// Description:
//    Test de declaration d'une classe avec un appel faux de cette methode dans main
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    Context: erreur --> appel faux de la fonction --> int au lieu de boolean
//
//
// Historique:
//    cree le 20/01/2022


class LovesMe{

    boolean Love(int x){
        if(x > 10)
        {
            return true ;
        }
        else
        {
            return false ;
        }

}
}

{
    LovesMe l = new LovesMe() ;
    boolean y = l.Love(12);

}
